@@ -108,8 +108,6 @@ namespace libtorrent
 		void on_receive(error_code const& error
 			, std::size_t bytes_transferred);
 
-		virtual void disconnect(error_code const& ec, int error = 0);
-			
 		std::string const& url() const { return m_original_url; }
 		
 		virtual void get_specific_peer_info(peer_info& p) const;
