@@ -124,14 +124,15 @@ namespace libtorrent
 			char str[1024];
 			const bool stats = tracker_req().send_stats;
 			snprintf(str, sizeof(str), "&peer_id=%s&port=%d&uploaded=%"PRId64
-				"&downloaded=%"PRId64"&left=%"PRId64"&corrupt=%"PRId64"&compact=1"
-				"&numwant=%d&key=%x&no_peer_id=1"
+				"&downloaded=%"PRId64"&left=%"PRId64"&corrupt=%"PRId64"&redundant=%"PRId64
+				"&compact=1&numwant=%d&key=%x&no_peer_id=1"
 				, escape_string((const char*)&tracker_req().pid[0], 20).c_str()
 				, tracker_req().listen_port
 				, stats ? tracker_req().uploaded : 0
 				, stats ? tracker_req().downloaded : 0
 				, stats ? tracker_req().left : 0
 				, stats ? tracker_req().corrupt : 0
+				, stats ? tracker_req().redundant: 0
 				, tracker_req().num_want
 				, tracker_req().key);
 			url += str;
