@@ -3078,6 +3078,15 @@ namespace libtorrent
 			// make sure we keep all the stats!
 			t->add_stats(statistics());
 
+			// report any partially received payload as redundant
+			boost::optional<piece_block_progress> pbp = downloading_piece_progress();
+			if (pbp
+				&& pbp->bytes_downloaded > 0
+				&& pbp->bytes_downloaded < pbp->full_block_bytes)
+			{
+				t->add_redundant_bytes(pbp->bytes_downloaded);
+			}
+
 			if (t->has_picker())
 			{
 				piece_picker& picker = t->picker();
